Add Main image .

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <style>
         body{
         font-family: "Ink Free";
-        background-color: #f4d8cd;
+        background-color: #ffffff;
 
         }
 </style>
@@ -20,6 +20,11 @@
 <body>
 
     <div class="continer">
+        <div class="row mt-5">
+            <div class="col-sm-4"></div>
+            <img src="ThreeMen-sMorris.jpg" class="rounded mx-auto d-block" alt="...">
+            <div class="col-sm-4"></div>
+        </div>
         <div class="row mt-5">
             <div class="col-sm-4"></div>
             <div class="col-sm-4" y><div class="text-center" style="font-size: 30px;">Three Men's Morris </div></div>
