--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <!--https://coolors.co/3a2e39-1e555c-f4d8cd-edb183-f15152-->
     <meta charset="UTF-8">
@@ -10,11 +12,11 @@
     <title>Document</title>
 </head>
 <style>
-        body{
+    body {
         font-family: "Ink Free";
         background-color: #ffffff;
 
-        }
+    }
 </style>
 
 <body>
@@ -27,21 +29,57 @@
         </div>
         <div class="row mt-5">
             <div class="col-sm-4"></div>
-            <div class="col-sm-4" y><div class="text-center" style="font-size: 30px;">Three Men's Morris </div></div>
+            <div class="col-sm-4" y>
+                <div class="text-center" style="font-size: 30px;">Three Men's Morris </div>
+            </div>
             <div class="col-sm-4"></div>
         </div>
-        <div class="row mt-5">
+        <div class="row mt-3">
             <div class="col-sm-4"></div>
-            <div class="col-sm-4"><button onclick="document.location='game.html'" style="background-color: #edb183;" type="button" class="btn btn-block">Play with your friend</button></div>
+            <div class="col-sm-4"><button onclick="document.location='game.html'" style="background-color: #edb183;"
+                    type="button" class="btn btn-block">Play with your friend</button></div>
             <div class="col-sm-4"></div>
         </div>
         
         <div class="row mt-3">
             <div class="col-sm-4"></div>
-            <div class="col-sm-4"><button onclick="document.location='gameAi.html'" style="background-color: #edb183;" type="button" class="btn btn-block">Play with computer</button></div>
+            <div class="col-sm-4">
+                <div class="text-center" style="font-size: 30px;">Play with computer:
+                </div>
+            </div>
+            <div class="col-sm-4"></div>
+        </div>
+
+        <div class="row mt-3">
+            <div class="col-sm-4"></div>
+            <div class="col-sm-4">
+                <div class="text-center" style="font-size: 30px;">Mode of Three Men's Morris:
+                </div>
+            </div>
+            <div class="col-sm-4"></div>
+        </div>
+        <div class="row mt-3">
+            <div class="col-sm-4"></div>
+            <div class="col-sm-4"><button onclick="document.location='gameAI.html'" style="background-color: #edb183;"
+                    type="button" class="btn btn-block">Easy</button></div>
+            <div class="col-sm-4"></div>
+        </div>
+
+        <div class="row mt-3">
+            <div class="col-sm-4"></div>
+            <div class="col-sm-4"><button onclick=" document.location='gameAI.html'" style="background-color: #edb183;"
+                    type="button" class="btn btn-block">Medium</button></div>
+            <div class="col-sm-4"></div>
+        </div>
+
+        <div class="row mt-3">
+            <div class="col-sm-4"></div>
+            <div class="col-sm-4"><button onclick="document.location='gameAI.html'" style="background-color: #edb183;"
+                    type="button" class="btn btn-block">Hard</button></div>
             <div class="col-sm-4"></div>
         </div>
     </div>
-    
+
 </body>
-</html> 
+
+</html>
