Add small things

--- a/gameAi.html
+++ b/gameAi.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Three js </title>
+    <title>Three Men Morris</title>
+    <link rel="icon" href="ThreeMen-sMorris.jpg">
     <script src="lib/three.js"></script>
     <script src="lib/OrbitControls.js"></script>
     <script src="sketchAI.js"></script> <!-- here is the diff -->
