--- a/gameAi.html
+++ b/gameAi.html
@@ -1,27 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Three Men Morris</title>
     <link rel="icon" href="ThreeMen-sMorris.jpg">
+
     <script src="lib/three.js"></script>
     <script src="lib/OrbitControls.js"></script>
     <script src="sketchAI.js"></script> <!-- here is the diff -->
+    <script>
+        var queryString = decodeURIComponent(window.location.search);
+        queryString = queryString.substring(1);
+        setAIMode(queryString);
+    </script>
     <style>
-        body{
+   
+        body {
             margin: 0;
         }
-        canvas{
+
+        canvas {
             width: 100%;
             height: 100%;
         }
     </style>
-        
 
 </head>
+
 <body>
 
 </body>
+
 </html>
