--- a/index.html
+++ b/index.html
@@ -62,22 +62,27 @@
         </div>
         <div class="row mt-3">
             <div class="col-sm-4"></div>
-            <div class="col-sm-4"><button onclick="document.location='gameAI.html'" style="background-color: #edb183;"
+            <div class="col-sm-4"><button onclick="window.location.href = 'gameAI.html' + '?easy';" style="background-color: #edb183;"
                     type="button" class="btn btn-block">Easy</button></div>
             <div class="col-sm-4"></div>
         </div>
 
         <div class="row mt-3">
             <div class="col-sm-4"></div>
-            <div class="col-sm-4"><button onclick=" document.location='gameAI.html'" style="background-color: #edb183;"
+            <div class="col-sm-4"><button onclick="window.location.href = 'gameAI.html' + '?medium';" style="background-color: #edb183;"
                     type="button" class="btn btn-block">Medium</button></div>
             <div class="col-sm-4"></div>
         </div>
 
         <div class="row mt-3">
             <div class="col-sm-4"></div>
-            <div class="col-sm-4"><button onclick="document.location='gameAI.html'" style="background-color: #edb183;"
+            <div class="col-sm-4"><button onclick="window.location.href = 'gameAI.html' + '?hard';"  style="background-color: #edb183;"
                     type="button" class="btn btn-block">Hard</button></div>
+            <div class="col-sm-4"></div>
+        </div>
+        <div class="row mt-3">
+            <div class="col-sm-4"></div>
+            <div class="col-sm-4"><bold>Powerd with 😂 by <i>Ashraf Habromman</i> and <i>Wasim Ghanayma</i></bold> </div>
             <div class="col-sm-4"></div>
         </div>
     </div>
