--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
         <div class="row mt-3">
             <div class="col-sm-4"></div>
-            <div class="col-sm-4"><button onclick="document.location='GAme.html'" style="background-color: #edb183;"
+            <div class="col-sm-4"><button onclick="document.location='game.html'" style="background-color: #edb183;"
                     type="button" class="btn btn-block">Play with your friend</button></div>
             <div class="col-sm-4"></div>
         </div>
