--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
         <div class="row mt-3">
             <div class="col-sm-4"></div>
-            <div class="col-sm-4"><bold>Powered with 😂 by <i>Ashraf Habromman</i> and <i>Wasim Ghanayma</i></bold> </div>
+            <div class="col-sm-4" style="text-align: center;"><bold>Powered with 😂 by <i>Ashraf Habromman</i> and <i>Wasim Ghanayma</i></bold> </div>
             <div class="col-sm-4"></div>
         </div>
     </div>
